--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ body{
 
 @media(max-width: 430px){
     .chatbot{
-        
         position: absolute;
+        top: 0;
         width: 100%;
         height: 100%;
         border-radius: 0;
